@@ -25,6 +25,7 @@ CAY-2485 Compact Slf4j Logger
 CAY-2487 Removed usage of CayenneException.
 CAY-2489 Add validation to the case of not to PK relationships
 CAY-2491 Remaster Db Import View
+CAY-2494 Rename dbImport tag from 'config' to 'dbImport'
 
 Bug Fixes:
 
